src/test/deca/codegen/valid/multiplication_f.deca
// Description:
//    test multiplication
//
// Resultats:
//  2.00000e+00
//
// Historique:
//    cree le 13/01/2017
{
float x = 1.0;
x = x * 2.0;
print(x);
}
